<resources>
    <string name="app_name">exer2_calibuso_b4l</string>
    <string name="header1_text">Which Disney Character are you?</string>
    <string name="header2_text">You are</string>
    <string name="subheader_text">Find out which Disney character are you!</string>
    <string name="woody_text">Woody! \n
        You are responsible, logical, structured, and an administrator who follows the norm.
        \n\n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at enim augue. Maecenas pretium a dolor nec congue. Duis sed ex sapien. Donec sodales lectus sit amet turpis convallis, nec posuere enim semper. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque gravida tortor eget maximus fermentum. Sed et lacus consectetur, tristique magna non, malesuada neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;Pellentesque consequat suscipit est, at bibendum mi lacinia in. Phasellus ornare nisl non ex mollis aliquam. Praesent nulla sapien, ullamcorper lobortis ligula sit amet, vulputate tincidunt erat. Donec at dignissim dolor, eu laoreet ex. Suspendisse a est libero. Maecenas sed justo a nulla laoreet congue. Pellentesque faucibus quam risus, sed condimentum lorem porta sit amet. Curabitur tempus sed mauris nec egestas. Maecenas dignissim dictum volutpat. In odio tortor, blandit non odio id, elementum efficitur orci. Etiam pulvinar egestas ligula, sit amet pretium nisl viverra sit amet. Mauris viverra diam ante, ac vehicula lectus mollis sagittis. Quisque non sapien euismod, porta urna vitae, imperdiet dolor. Vestibulum eget massa in magna aliquam congue varius sit amet quam. Maecenas urna lacus, pellentesque et feugiat sit amet, consequat id dui. Nunc malesuada a diam ultricies vulputate.</string>
    <string name="zazu_text">Zazu!\n
        You are organized, conservative, loyal, hardworker, and obedient.
    \n\n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at enim augue. Maecenas pretium a dolor nec congue. Duis sed ex sapien. Donec sodales lectus sit amet turpis convallis, nec posuere enim semper. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque gravida tortor eget maximus fermentum. Sed et lacus consectetur, tristique magna non, malesuada neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;Pellentesque consequat suscipit est, at bibendum mi lacinia in. Phasellus ornare nisl non ex mollis aliquam. Praesent nulla sapien, ullamcorper lobortis ligula sit amet, vulputate tincidunt erat. Donec at dignissim dolor, eu laoreet ex. Suspendisse a est libero. Maecenas sed justo a nulla laoreet congue. Pellentesque faucibus quam risus, sed condimentum lorem porta sit amet. Curabitur tempus sed mauris nec egestas. Maecenas dignissim dictum volutpat. In odio tortor, blandit non odio id, elementum efficitur orci. Etiam pulvinar egestas ligula, sit amet pretium nisl viverra sit amet. Mauris viverra diam ante, ac vehicula lectus mollis sagittis. Quisque non sapien euismod, porta urna vitae, imperdiet dolor. Vestibulum eget massa in magna aliquam congue varius sit amet quam. Maecenas urna lacus, pellentesque et feugiat sit amet, consequat id dui. Nunc malesuada a diam ultricies vulputate.
    </string>
    <string name="snow_white_text">Snow White! \n
        You are social, caretaker, cooperative, sensitive, understanding, and generous.
    \n\n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at enim augue. Maecenas pretium a dolor nec congue. Duis sed ex sapien. Donec sodales lectus sit amet turpis convallis, nec posuere enim semper. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque gravida tortor eget maximus fermentum. Sed et lacus consectetur, tristique magna non, malesuada neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;Pellentesque consequat suscipit est, at bibendum mi lacinia in. Phasellus ornare nisl non ex mollis aliquam. Praesent nulla sapien, ullamcorper lobortis ligula sit amet, vulputate tincidunt erat. Donec at dignissim dolor, eu laoreet ex. Suspendisse a est libero. Maecenas sed justo a nulla laoreet congue. Pellentesque faucibus quam risus, sed condimentum lorem porta sit amet. Curabitur tempus sed mauris nec egestas. Maecenas dignissim dictum volutpat. In odio tortor, blandit non odio id, elementum efficitur orci. Etiam pulvinar egestas ligula, sit amet pretium nisl viverra sit amet. Mauris viverra diam ante, ac vehicula lectus mollis sagittis. Quisque non sapien euismod, porta urna vitae, imperdiet dolor. Vestibulum eget massa in magna aliquam congue varius sit amet quam. Maecenas urna lacus, pellentesque et feugiat sit amet, consequat id dui. Nunc malesuada a diam ultricies vulputate.
    </string>
    <string name="marlin_text">Marlin!\n
        You are caring, practical, emphatic, shy, loyal, and conventional
    \n\n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at enim augue. Maecenas pretium a dolor nec congue. Duis sed ex sapien. Donec sodales lectus sit amet turpis convallis, nec posuere enim semper. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque gravida tortor eget maximus fermentum. Sed et lacus consectetur, tristique magna non, malesuada neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;Pellentesque consequat suscipit est, at bibendum mi lacinia in. Phasellus ornare nisl non ex mollis aliquam. Praesent nulla sapien, ullamcorper lobortis ligula sit amet, vulputate tincidunt erat. Donec at dignissim dolor, eu laoreet ex. Suspendisse a est libero. Maecenas sed justo a nulla laoreet congue. Pellentesque faucibus quam risus, sed condimentum lorem porta sit amet. Curabitur tempus sed mauris nec egestas. Maecenas dignissim dictum volutpat. In odio tortor, blandit non odio id, elementum efficitur orci. Etiam pulvinar egestas ligula, sit amet pretium nisl viverra sit amet. Mauris viverra diam ante, ac vehicula lectus mollis sagittis. Quisque non sapien euismod, porta urna vitae, imperdiet dolor. Vestibulum eget massa in magna aliquam congue varius sit amet quam. Maecenas urna lacus, pellentesque et feugiat sit amet, consequat id dui. Nunc malesuada a diam ultricies vulputate.
    </string>
    <string name="flynn_rider_text">Flynn Rider!\n
        You are realist, quick, adaptable, honest, and lives in the present moment.
    \n\n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at enim augue. Maecenas pretium a dolor nec congue. Duis sed ex sapien. Donec sodales lectus sit amet turpis convallis, nec posuere enim semper. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque gravida tortor eget maximus fermentum. Sed et lacus consectetur, tristique magna non, malesuada neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;Pellentesque consequat suscipit est, at bibendum mi lacinia in. Phasellus ornare nisl non ex mollis aliquam. Praesent nulla sapien, ullamcorper lobortis ligula sit amet, vulputate tincidunt erat. Donec at dignissim dolor, eu laoreet ex. Suspendisse a est libero. Maecenas sed justo a nulla laoreet congue. Pellentesque faucibus quam risus, sed condimentum lorem porta sit amet. Curabitur tempus sed mauris nec egestas. Maecenas dignissim dictum volutpat. In odio tortor, blandit non odio id, elementum efficitur orci. Etiam pulvinar egestas ligula, sit amet pretium nisl viverra sit amet. Mauris viverra diam ante, ac vehicula lectus mollis sagittis. Quisque non sapien euismod, porta urna vitae, imperdiet dolor. Vestibulum eget massa in magna aliquam congue varius sit amet quam. Maecenas urna lacus, pellentesque et feugiat sit amet, consequat id dui. Nunc malesuada a diam ultricies vulputate.
    </string>
    <string name="tinkerbell_text">Tinkerbell!\n
        You are adventurous, independent, quiet, adaptable. You also have technical and mechanical skills.
    \n\n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at enim augue. Maecenas pretium a dolor nec congue. Duis sed ex sapien. Donec sodales lectus sit amet turpis convallis, nec posuere enim semper. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque gravida tortor eget maximus fermentum. Sed et lacus consectetur, tristique magna non, malesuada neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;Pellentesque consequat suscipit est, at bibendum mi lacinia in. Phasellus ornare nisl non ex mollis aliquam. Praesent nulla sapien, ullamcorper lobortis ligula sit amet, vulputate tincidunt erat. Donec at dignissim dolor, eu laoreet ex. Suspendisse a est libero. Maecenas sed justo a nulla laoreet congue. Pellentesque faucibus quam risus, sed condimentum lorem porta sit amet. Curabitur tempus sed mauris nec egestas. Maecenas dignissim dictum volutpat. In odio tortor, blandit non odio id, elementum efficitur orci. Etiam pulvinar egestas ligula, sit amet pretium nisl viverra sit amet. Mauris viverra diam ante, ac vehicula lectus mollis sagittis. Quisque non sapien euismod, porta urna vitae, imperdiet dolor. Vestibulum eget massa in magna aliquam congue varius sit amet quam. Maecenas urna lacus, pellentesque et feugiat sit amet, consequat id dui. Nunc malesuada a diam ultricies vulputate.
    </string>
    <string name="timon_text">Timon!\n
        You are charming, engaging, entertaining, cooperative, thrill seeking, and the center of attention.
    \n\n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at enim augue. Maecenas pretium a dolor nec congue. Duis sed ex sapien. Donec sodales lectus sit amet turpis convallis, nec posuere enim semper. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque gravida tortor eget maximus fermentum. Sed et lacus consectetur, tristique magna non, malesuada neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;Pellentesque consequat suscipit est, at bibendum mi lacinia in. Phasellus ornare nisl non ex mollis aliquam. Praesent nulla sapien, ullamcorper lobortis ligula sit amet, vulputate tincidunt erat. Donec at dignissim dolor, eu laoreet ex. Suspendisse a est libero. Maecenas sed justo a nulla laoreet congue. Pellentesque faucibus quam risus, sed condimentum lorem porta sit amet. Curabitur tempus sed mauris nec egestas. Maecenas dignissim dictum volutpat. In odio tortor, blandit non odio id, elementum efficitur orci. Etiam pulvinar egestas ligula, sit amet pretium nisl viverra sit amet. Mauris viverra diam ante, ac vehicula lectus mollis sagittis. Quisque non sapien euismod, porta urna vitae, imperdiet dolor. Vestibulum eget massa in magna aliquam congue varius sit amet quam. Maecenas urna lacus, pellentesque et feugiat sit amet, consequat id dui. Nunc malesuada a diam ultricies vulputate.
    </string>
    <string name="start_text">Start</string>
    <string name="retry_text">Retry</string>
    <string name="image1">image1</string>
</resources>